# careernova

./: README.md  requirements.txt
ai-service/: Dockerfile.txt  pyproject.toml  render.yaml
ai_service/: main.py
web/: package.json  pnpm-lock.yaml
web/prisma/: schema.prisma
